Fix editor word wrapping.

--- a/css/index.less
+++ b/css/index.less
@@ -18,6 +18,8 @@ textarea {
   left: -9999px;
   top: 0;
   overflow: auto;
+  white-space: pre;
+  word-wrap: normal;
 }
 
 #monitor {
